feat: 安全与认证机制优化方案
Co-authored-by: traeagent <traeagent@users.noreply.github.com>